--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,9 @@ name: "Publish to GitHub Pages"
 env:
   GODOT_VERSION: 3.5.3
   PROJECT_PATH: src
+  RELEASE_NAME: stable
+  SUBDIR:
+  GODOT_PLATFORM: linux_headless.64
 
 on:
   workflow_dispatch:
@@ -15,23 +18,31 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
-    container:
-      image: barichello/godot-ci:3.5.3
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Setup
+        
+      - name: Install Godot
         run: |
-          mkdir -v -p ~/.local/share/godot/export_templates/
-          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends ca-certificates git git-lfs unzip wget zip rsync
+          sudo wget https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}${SUBDIR}/Godot_v${GODOT_VERSION}-${RELEASE_NAME}_${GODOT_PLATFORM}.zip
+          sudo wget https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}${SUBDIR}/Godot_v${GODOT_VERSION}-${RELEASE_NAME}_export_templates.tpz
+          sudo mkdir ~/.cache
+          sudo mkdir -p ~/.config/godot
+          sudo mkdir -p ~/.local/share/godot/templates/${GODOT_VERSION}.${RELEASE_NAME}
+          sudo ln -s ~/.local/share/godot/templates ~/.local/share/godot/export_templates
+          sudo unzip Godot_v${GODOT_VERSION}-${RELEASE_NAME}_${GODOT_PLATFORM}.zip
+          sudo mv -v Godot_v${GODOT_VERSION}-${RELEASE_NAME}_${GODOT_PLATFORM} /usr/local/bin/godot
+          sudo unzip Godot_v${GODOT_VERSION}-${RELEASE_NAME}_export_templates.tpz
+          sudo mkdir -p /root/.local/share/godot/templates/${GODOT_VERSION}.${RELEASE_NAME}
+          sudo mv -v templates/* /root/.local/share/godot/templates/${GODOT_VERSION}.${RELEASE_NAME}
+          sudo rm -f Godot_v${GODOT_VERSION}-${RELEASE_NAME}_export_templates.tpz Godot_v${GODOT_VERSION}-${RELEASE_NAME}_${GODOT_PLATFORM}.zip
       - name: Build
         run: |
-          mkdir -v -p build/web
+          sudo mkdir -v -p build/web
           cd $PROJECT_PATH
-          godot -v --export-release --headless "Web" ../build/web/index.html
+          sudo godot --export "HTML5" ../build/web/index.html
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -39,7 +50,8 @@ jobs:
           path: build/web
       - name: Install rsync
         run: |
-          apt-get update && apt-get install -y rsync
+          sudo apt-get update
+          sudo apt-get install -y rsync
       - name: Deploy!
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
